--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
     </ul>
   </section>
   <script>
-    const ws = new WebSocket("ws://192.168.0.101:8080");
+    const ws = new WebSocket("ws://47.98.42.150:8900");
     switch (ws.readyState) {
       case WebSocket.CLOSING:
-        location.reload();
+        refresh();
         break;
       case WebSocket.CLOSED:
         refresh();
